Attempt at improvements